--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "musma-web-template",
+  "name": "react-boilerplate",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.12.1",
-    "axios": "^0.27.2",
+    "@emotion/react": "^11.10.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@musma/eslint-config": "^0.0.41",
-    "@types/google.maps": "^3.49.2",
+    "@babel/core": "^7.18.13",
+    "@emotion/babel-plugin": "^11.10.2",
+    "@musma/eslint-config-react": "^0.0.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "autoprefixer": "^10.4.8",
+    "@vitejs/plugin-react": "^2.0.1",
     "path": "^0.12.7",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.5"
+    "typescript": "^4.6.4",
+    "vite": "^3.0.7"
   }
 }
