--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.2",
+    "@emotion/babel-preset-css-prop": "^11.10.0",
     "@musma/eslint-config-react": "^0.0.5",
     "@types/google.maps": "^3.50.0",
     "@types/react": "^18.0.18",
