--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@emotion/babel-preset-css-prop": "^11.10.0",
-    "@musma/eslint-config-react": "^0.0.5",
+    "@babel/preset-react": "^7.18.6",
+    "@emotion/babel-plugin": "^11.10.2",
+    "@musma/eslint-config-react": "^0.0.6",
     "@types/google.maps": "^3.50.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
