--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "apollo": "^2.34.0",
     "path": "^0.12.7",
     "typescript": "^4.8.2",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.1"
   }
 }
