--- a/package.json
+++ b/package.json
@@ -16,25 +16,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "apollo:download": "yarn apollo schema:download --endpoint=https://graphql.aramco.musma.net/graphql schema.json",
-    "amplfiy:codegen": "amplify codegen"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@react-google-maps/api": "^2.12.2",
-    "axios": "^0.27.2",
+    "@musma/react-component": "^0.0.59",
+    "@react-google-maps/api": "^2.13.1",
+    "axios": "^1.1.3",
     "file-saver": "^2.0.5",
-    "i18next": "^21.9.1",
-    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "luxon": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.2",
     "rechart": "^0.0.1",
-    "recoil": "^0.7.5",
-    "styled-system": "^5.1.5",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
@@ -42,16 +39,16 @@
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@emotion/babel-plugin": "^11.10.2",
-    "@musma/eslint-config-react": "^0.0.6",
-    "@types/google.maps": "^3.50.1",
-    "@types/react": "^18.0.19",
+    "@musma/eslint-config-react": "^0.0.8",
+    "@types/google.maps": "^3.50.4",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/styled-system": "^5.1.15",
     "@vitejs/plugin-react": "^2.1.0",
     "apollo": "^2.34.0",
     "path": "^0.12.7",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.0",
-    "vite-plugin-svgr": "^2.2.1"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vite-plugin-svgr": "^2.2.2"
   }
 }
