feat: 의존성 업데이트 및 추천 확장 프로그램 추가

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,8 @@
     "eamodio.gitlens",
     "pkief.material-icon-theme",
     "wayou.vscode-todo-highlight",
-    "codeandstuff.package-json-upgrade"
+    "codeandstuff.package-json-upgrade",
+    "formulahendry.auto-rename-tag",
+    "meganrogge.template-string-converter"
   ]
 }
