--- a/package.json
+++ b/package.json
@@ -19,36 +19,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@musma/react-component": "^0.1.6",
+    "@emotion/react": "^11.10.5",
+    "@musma/react-component": "^0.1.8",
     "@react-google-maps/api": "^2.13.1",
+    "apollo": "^2.34.0",
     "axios": "^1.1.3",
     "file-saver": "^2.0.5",
-    "i18next": "^22.0.2",
+    "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
     "luxon": "^3.0.4",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.4.2",
     "rechart": "^0.0.1",
+    "recharts": "^2.1.16",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@emotion/babel-plugin": "^11.10.2",
+    "@emotion/babel-plugin": "^11.10.5",
     "@musma/eslint-config-react": "^0.1.4",
     "@types/google.maps": "^3.50.4",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
-    "@types/styled-system": "^5.1.15",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "apollo": "^2.34.0",
     "path": "^0.12.7",
     "typescript": "^4.8.4",
-    "vite": "^3.2.0",
+    "vite": "^3.2.1",
     "vite-plugin-svgr": "^2.2.2"
   }
 }
